--- a/titlesection/titlesection.css
+++ b/titlesection/titlesection.css
@@ -245,7 +245,12 @@
 /*  }*/
 /*}*/
 
-
+:root {
+  /*--titleSectionPrimaryColor: white;*/
+  --titleSectionPrimaryColor: rgb(255, 255, 255);
+  --titleSectionSecondaryColor: rgb(224, 170, 160);
+  --titleSectionTertiaryColor: rgb(157, 172, 178);
+}
 h1 {
   color: blue;
 }
@@ -256,8 +261,37 @@ button:hover {
   font-size: 20px;
 }
 
+/*#title {*/
+/*  width: 100%;*/
+/*  text-align: center;*/
+/*  margin-top: 50px;*/
+/*}*/
 #title {
-  width: 100%;
+  color: var(--titleSectionPrimaryColor);
   text-align: center;
-  margin-top: 50px;
+  padding-top: 200px;
+  background-image: url('img.png');
+  background-position: center top;
+}
+.title-section-button {
+  color: var(--titleSectionPrimaryColor);
+  border: solid var(--titleSectionPrimaryColor) 1px;
+  border-radius: 5px;
+  padding: 15px 20px;
+  background-color: transparent;
+}
+
+.title-section-button:hover {
+  background-color: red;
+  background-color: var(--titleSectionPrimaryColor);
+  color: var(--titleSectionSecondaryColor);
+  cursor: pointer;
+
+}
+.title-section-header {
+  margin-bottom: -5px;
+}
+
+.title-section-subtitle {
+  margin-bottom: 40px;
 }
